finished sustainability page

--- a/sustainanability.html
+++ b/sustainanability.html
@@ -234,34 +234,60 @@
             magna nunc, lectus risus ultricies pellentesque. Semper lobortis
             praesent elementum suspendisse auctor consectetur dui, eget in.
         </p>
-        <section class="content-section">
+        <section class="content-section sustainability-page">
             <h2 class="section-title dark-green">We use sustainable materials</h2>
             <div class="body-box">
-                <h3>Recycled metals</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit auctor tortor faucibus commodo.
-                    Congue potenti tellus et ornare consequat. Turpis tellus non dictum amet tempor. Quam sollicitudin
-                    elementum lobortis non a pulvinar vulputate quis quis. </p>
-                <h3>Labgrown gems</h3>
-                <p>Ac faucibus quis pretium commodo ultrices
-                    varius. Sagittis arcu gravida cras vel id. Vestibulum in tincidunt aliquam neque. Sed eget et vitae
-                    velit accumsan. Id semper ac porta nunc viverra a. Imperdiet id a odio eleifend volutpat enim
-                    dignissim urna. Risus eleifend. </p>
+                <div class="text-image-box"><img src="assets/gold-sus.png" alt="">
+                    <div class="text-box-sus">
+                        <h3>Recycled metals</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit auctor tortor faucibus
+                            commodo.
+                            Congue potenti tellus et ornare consequat. Turpis tellus non dictum amet tempor. Quam
+                            sollicitudin
+                            elementum lobortis non a pulvinar vulputate quis quis. </p>
+                    </div>
+                </div>
+                <div class="text-image-box"><img src="assets/silver-sus.png" alt="">
+                    <div class="text-box-sus">
+                        <h3>Labgrown gems</h3>
+                        <p>Ac faucibus quis pretium commodo ultrices
+                            varius. Sagittis arcu gravida cras vel id. Vestibulum in tincidunt aliquam neque. Sed eget
+                            et
+                            vitae
+                            velit accumsan. Id semper ac porta nunc viverra a. Imperdiet id a odio eleifend volutpat
+                            enim
+                            dignissim urna. Risus eleifend. </p>
+                    </div>
+                </div>
             </div>
         </section>
-        <section class="content-section">
+        <section class="content-section sustainability-page">
             <h2 class="section-title dark-green">Eco-friendly packaging</h2>
             <div class="body-box">
-                <h3>Recyclable packaging</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit auctor tortor faucibus commodo.
-                    Congue potenti tellus et ornare consequat. Turpis tellus non dictum amet tempor. Quam sollicitudin
-                    elementum lobortis non a pulvinar vulputate quis quis. </p>
-                <h3>Natural dye</h3>
-                <p>Ac faucibus quis pretium commodo ultrices
-                    varius. Sagittis arcu gravida cras vel id. Vestibulum in tincidunt aliquam neque. Sed eget et vitae
-                    velit accumsan. Id semper ac porta nunc viverra a. Imperdiet id a odio eleifend volutpat enim
-                    dignissim urna. Risus eleifend. </p>
+                <div class="text-image-box"><img src="assets/packaging.jpg" alt="">
+                    <div class="text-box-sus">
+                        <h3>Recyclable packaging</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit auctor tortor faucibus
+                            commodo.
+                            Congue potenti tellus et ornare consequat. Turpis tellus non dictum amet tempor. Quam
+                            sollicitudin
+                            elementum lobortis non a pulvinar vulputate quis quis. </p>
+                    </div>
+                </div>
+                <div class="text-image-box"><img src="assets/natural-dye.jpg" alt="">
+                    <div class="text-box-sus">
+                        <h3>Natural dye</h3>
+                        <p>Ac faucibus quis pretium commodo ultrices
+                            varius. Sagittis arcu gravida cras vel id. Vestibulum in tincidunt aliquam neque. Sed eget
+                            et
+                            vitae
+                            velit accumsan. Id semper ac porta nunc viverra a. Imperdiet id a odio eleifend volutpat
+                            enim
+                            dignissim urna. Risus eleifend. </p>
+                    </div>
+                </div>
             </div>
         </section>
 
