Styled care guide

--- a/careguide.html
+++ b/careguide.html
@@ -13,16 +13,19 @@
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="css/footer.css" />
-    <title>Metals care guide | BYÙ Studio</title>
+    <title>Product care guide | BYÙ Studio</title>
 </head>
 
 <body>
+    <div class="bg-brush-waves"></div>
     <header>
-        <nav>
-            <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-            <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
-            <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
-        </nav>
+        <div class="nav-box">
+            <nav>
+                <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
+                <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
+                <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
+            </nav>
+        </div>
         <div class=" cart-outer-box">
             <img src="assets/cross-thin.svg" alt="Remove item" class="close-cart" />
             <h1 class="page-title">Cart</h1>
@@ -50,7 +53,6 @@
             <a href="checkout-info.html" class="cart-to-checkout"><button>Proceed to checkout</button></a>
         </div>
     </header>
-    <div class="bg-brush-waves"></div>
     <section class="sec-hamburger">
         <div class="head-hamburger">
             <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
@@ -235,9 +237,15 @@
             <h2 class="section-title yellow">General metal care</h2>
             <div class="body-box">
                 <ol class="process">
-                    <li>Tip number one</li>
-                    <li>Another tip about general metal care</li>
-                    <li>Some more tips</li>
+                    <div class="list-box care-guide"><img src="assets/step-one.svg" alt="">
+                        <li>Take the jewellery off when you’re doing chores</li>
+                    </div>
+                    <div class="list-box care-guide"><img src="assets/step-two.svg" alt="">
+                        <li>Try to store each piece separately</li>
+                    </div>
+                    <div class="list-box care-guide"><img src="assets/step-three.svg" alt="">
+                        <li>Visit goldsmith for maintenance</li>
+                    </div>
                 </ol>
             </div>
         </section>
@@ -245,10 +253,15 @@
             <h2 class="section-title yellow">Gold care</h2>
             <div class="body-box">
                 <ol class="process">
-                    <li>Tip about gold number one</li>
-                    <li>Another tip about gold care</li>
-                    <li>One more tip about gold</li>
-                    <li>The last tip about gold</li>
+                    <div class="list-box care-guide"><img src="assets/step-one.svg" alt="">
+                        <li>Don't expose it to water</li>
+                    </div>
+                    <div class="list-box care-guide"><img src="assets/step-two.svg" alt="">
+                        <li>Store it separately from other jewellery since it can get scratched easily</li>
+                    </div>
+                    <div class="list-box care-guide"><img src="assets/step-three.svg" alt="">
+                        <li>Don't wear it when you're doing something active</li>
+                    </div>
                 </ol>
             </div>
         </section>
@@ -256,10 +269,12 @@
             <h2 class="section-title yellow">Silver care</h2>
             <div class="body-box">
                 <ol class="process">
-                    <li>Silver care tip no. 1</li>
-                    <li>A bit longer care tip about silver because we need to see how the design looks like with long
-                        sentences.</li>
-                    <li>The last tip about silver</li>
+                    <div class="list-box care-guide"><img src="assets/step-one.svg" alt="">
+                        <li>Don’t expose it to sunlight too much</li>
+                    </div>
+                    <div class="list-box care-guide"><img src="assets/step-three.svg" alt="">
+                        <li>Avoid toothpaste when cleaning your rings</li>
+                    </div>
                 </ol>
             </div>
         </section>
