fixed landing page

--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
   </header>
   <section id="hero">
     <h1>
-      Create your unique piece of
-      <div id="jewellery">
-        <img id="yellowText" src="assets/jewellery.svg" alt="decorative-heading" />
-      </div>
+      Create your unique piece of &nbsp;<span>jewellery</span>
     </h1>
     <img class="heroImg" id="heroDesk" src="assets/hero_img.jpg" alt="hero-img" />
     <img class="heroImg" id="heroMob" src="assets/hero-mobile.jpg" alt="hero-img" />
@@ -78,24 +75,20 @@
       <div class="oneStep">
         <img src="assets/step-one.svg" alt="">
         <h4>Choose your kit</h4>
-        <p>Standard kit for one person, Kit for two and Family kit for a group of people. Choose the one that fits you
-          the best. </p>
       </div>
       <div class="oneStep">
         <img src="assets/step-two.svg" alt="">
         <h4>Choose your kit</h4>
-        <p>Watch the tutorials here on the website or go complete freestyle. It's completely upon you. </p>
       </div>
       <div class="oneStep">
         <img src="assets/step-three.svg" alt="">
         <h4>Choose your kit</h4>
-        <p>Are you done with your masterpiece? Let's transform it into real jewelry. Silver or Gold, you choose.</p>
       </div>
     </div>
   </section>
   <section id="kits">
     <div id="kitsText">
-      <h2>Go explore our kits</h2>
+      <h2>Explore our kits</h2>
       <p>In our kit selection, you can choose the type that fits you the best. Whether you want to try it on your own,
         with your friend or even with your whole family. We have got you covered.</p>
       <button>Tell me more</button>
