Added alt to index

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="cart-outer-card">
         <section class="cart-card">
           <div class="cart-img-item-container">
-            <img src="assets/kit-for-two-box.webp" alt="" />
+            <img src="assets/kit-for-two-box.webp" alt="Kit for two box photo" />
           </div>
           <h3 class="cart-item-name">Kit for two</h3>
           <p class="cart-item-description">No extras</p>
@@ -80,7 +80,7 @@
           <div class="big-pages-body-flex">
             <div class="big-pages-body">
               <a href="productlist.html?kits=true">
-                <img class="ham-cat-image" src="assets/shop-blur.png" alt="" />
+                <img class="ham-cat-image" src="assets/shop-blur.png" alt="Kit box" />
                 <div class="big-link-flex">
                   <h2>KITS</h2>
                   <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
@@ -124,33 +124,33 @@
         </div>
         <div class="big-pages big-pages-about hidden">
           <div class="big-pages-header">
-            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="BYU logo" />
           </div>
           <div class="big-pages-body-flex">
             <div class="big-pages-body">
               <a href="about.html">
-                <img class="ham-cat-image" src="assets/about-blur.png" alt="" />
+                <img class="ham-cat-image" src="assets/about-blur.png" alt="BYU owner in the studio" />
                 <div class="big-link-flex">
                   <h2>ABOUT US</h2>
                   <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="manifesto.html">
-                <img class="ham-cat-image" src="assets/manifesto-blur.png" alt="" />
+                <img class="ham-cat-image" src="assets/manifesto-blur.png" />
                 <div class="big-link-flex">
                   <h2>MANIFESTO</h2>
                   <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="sustainanability.html">
-                <img class="ham-cat-image" src="assets/sustainability-blur.png" alt="" />
+                <img class="ham-cat-image" src="assets/sustainability-blur.png" alt="Group of friends crafting" />
                 <div class="big-link-flex">
                   <h2>SUSTAINABILITY</h2>
                   <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="contact.html">
-                <img class="ham-cat-image" src="assets/contact-blur.png" alt="" />
+                <img class="ham-cat-image" src="assets/contact-blur.png" alt="Piling hands" />
                 <div class="big-link-flex">
                   <h2>CONTACT US</h2>
                   <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
@@ -177,12 +177,12 @@
         </div>
         <div class="big-pages big-pages-getstarted hidden">
           <div class="big-pages-header">
-            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="BYU logo" />
           </div>
           <div class="big-pages-body-flex">
             <div class="big-pages-body">
               <a href="faq.html">
-                <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
+                <img class="ham-cat-image" src="assets/faq-blur.png" alt="Two friends with casted ring" />
                 <div class="big-link-flex">
                   <h2>FAQ</h2>
                   <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
@@ -226,13 +226,13 @@
     </h1>
     <img class="heroImg" id="heroDesk" src="assets/hero_img.jpg" alt="hero-img" />
     <img class="heroImg" id="heroMob" src="assets/hero-mobile.jpg" alt="hero-img" />
-    <div id="background" alt=""></div>
-    <div id="bgMob" id="background-mobile" alt=""></div>
+    <div id="background"></div>
+    <div id="bgMob" id="background-mobile"></div>
   </section>
   <section id="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/aBuU-CmrTjg" title="YouTube video player"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
+      allowfullscreen loading=lazy></iframe>
     <article>
       <h3>By you, for you</h2>
         <p id="videoPar">We are selling DIY kits containing different types of shaping wax, shaping tools, instructions
@@ -245,15 +245,15 @@
     <h2>Order your kit today.</h2>
     <div id="stepsWrapper">
       <div class="oneStep">
-        <img src="assets/step-one.svg" alt="">
+        <img src="assets/step-one.svg" alt="Step 1">
         <h4>Choose your kit</h4>
       </div>
       <div class="oneStep">
-        <img src="assets/step-two.svg" alt="">
+        <img src="assets/step-two.svg" alt="Step 2">
         <h4>Choose your kit</h4>
       </div>
       <div class="oneStep">
-        <img src="assets/step-three.svg" alt="">
+        <img src="assets/step-three.svg" alt="Step 3">
         <h4>Choose your kit</h4>
       </div>
     </div>
@@ -265,13 +265,13 @@
         with your friend or even with your whole family. We have got you covered.</p>
       <button>Tell me more</button>
     </div>
-    <img id="kbiggerImg" src="assets/kits-lp-big.jpg" alt="">
-    <img id="ksmallerImg" src="assets/kits-lp-small.jpg" alt="">
+    <img id="kbiggerImg" src="assets/kits-lp-big.jpg" alt="Image of doing DIY alone">
+    <img id="ksmallerImg" src="assets/kits-lp-small.jpg" alt="Image of doing DIY together">
 
   </section>
   <section id="sustain">
-    <img id="ssmallerImg" src="assets/sus-lp-small.jpg" alt="">
-    <img id="sbiggerImg" src="assets/sus-lp-big.jpg" alt="">
+    <img id="ssmallerImg" src="assets/sus-lp-small.jpg" alt="Natural-dye bagss">
+    <img id="sbiggerImg" src="assets/sus-lp-big.jpg" alt="Recyclable boxes">
     <div id="sustainText">
       <h2>We care about nature</h2>
       <p>It is important for us to make sustainable choices, and our product isn't different from that. Material,
@@ -286,11 +286,11 @@
       <p>Do you wonder what the final product can look like? Wonder no more. Here you can see some of the creations made
         from BYU kits. Jump to our inspiration page for even more ideas,</p><button>Show me more</button>
     </div>
-    <img src="assets/pinterest.png" alt="">
+    <img src="assets/pinterest.png" alt="Examples of what our customers made">
 
   </section>
   <section id="trustpilot">
-    <div><img src="assets/trustpilot.svg" alt="">
+    <div><img src="assets/trustpilot.svg" alt="path to trustpilot website">
       <p>TrustScore <span id="underline">4.8 | 287 reviews</span></p>
     </div>
     <h4>We are a trusted brand</h3>
@@ -303,8 +303,8 @@
       piece of jewelry, and shine.</p>
     <p id="contact">+45 12 34 56 78 | hello@byustudio.dk</p>
     <div id="some">
-      <img src="assets/ig_logo.svg" alt="" /><img src="assets/facebook_logo.svg" alt="" /><img src="assets/Vector.svg"
-        alt="" />
+      <img src="assets/ig_logo.svg" alt="instagram.com/byu" /><img src="assets/facebook_logo.svg"
+        alt="facebook.com/byu" /><img src="assets/Vector.svg" alt="pinterest.com/byu" />
     </div>
     <div id="footerNav">
       <ul>
