Added titles and meta descriptions

--- a/careguide.html
+++ b/careguide.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
+    <meta name="description" content="Make jewellery last longer. Read a care guide about gold and silver jewellery.">
     <link rel="stylesheet" href="css/additional-pages.css" />
     <link rel="stylesheet" href="css/careguide.css" />
     <link rel="stylesheet" href="css/root.css" />
