--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Discover joy with DIY jewellery at BYÙ Studio. Design unique rings and cast it in silver or gold. Sustainable and recycled materials. Fast delivery and shipping in all Denmark. Visit our offical webshop.">
   <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="css/root.css" />
   <link rel="stylesheet" href="css/nav.css">
