--- a/tutorial.html
+++ b/tutorial.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Learn about types of sculptural wax. Blue wax, red wax, pink wax for jewellery. Design own jewellery pieces. Create unique rings.">
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/additional-pages.css" />
     <link rel="stylesheet" href="css/tutorial.css" />
