--- a/productlist.html
+++ b/productlist.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/nav.css" />
   <link rel="stylesheet" href="css/cart.css">
   <link rel="stylesheet" href="css/footer.css" />
-  <title>Document</title>
+  <title>Shop | BYÙ Studio</title>
 </head>
 
 <body>
