--- a/index.html
+++ b/index.html
@@ -247,15 +247,15 @@
     <div id="stepsWrapper">
       <div class="oneStep">
         <img src="assets/step-one.svg" alt="Step 1">
-        <h4>Choose your kit</h4>
+        <p>Choose your kit</p>
       </div>
       <div class="oneStep">
         <img src="assets/step-two.svg" alt="Step 2">
-        <h4>Choose your kit</h4>
+        <p>Choose your kit</p>
       </div>
       <div class="oneStep">
         <img src="assets/step-three.svg" alt="Step 3">
-        <h4>Choose your kit</h4>
+        <p>Choose your kit</p>
       </div>
     </div>
   </section>
