some more corrections

--- a/contact.html
+++ b/contact.html
@@ -243,16 +243,16 @@
         <h2 class="section-title dark-green">Send a message</h2>
         <section class="form-input">
           <div class="two-box-flex">
-            <label for="">Name<input type="text" id="firstname" name="firstname" placeholder="Jane" /></label>
-            <label for="">Surname<input type="text" id="surname" name="surname" placeholder="Doe" /></label>
+            <label for="firstname">Name<input type="text" id="firstname" name="firstname" placeholder="Jane" /></label>
+            <label for="surname">Surname<input type="text" id="surname" name="surname" placeholder="Doe" /></label>
           </div>
-          <label for="">Phone number (optional)<input type="tel" name="phonenumber" id="phonenumber"
+          <label for="phonenumber">Phone number (optional)<input type="tel" name="phonenumber" id="phonenumber"
               placeholder="+45 12 34 56 78" /></label>
-          <label for="">Email<input type="email" name="email" id="email" placeholder="jane.doe@mail.dk" /></label>
+          <label for="email">Email<input type="email" name="email" id="email" placeholder="jane.doe@mail.dk" /></label>
 
-          <label for="">Subject<input type="text" name="subject" id="subject" placeholder="The topic" /></label>
+          <label for="subject">Subject<input type="text" name="subject" id="subject" placeholder="The topic" /></label>
 
-          <label for="">Your message<textarea name="message" required id="message" rows="8" columns="8"
+          <label for="message">Your message<textarea name="message" required id="message" rows="8" columns="8"
               placeholder="Write your concern here"></textarea></label>
 
 
