--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <p>Do you wonder what the final product can look like? Wonder no more. Here you can see some of the creations made
         from BYU kits. Jump to our inspiration page for even more ideas,</p><button>Show me more</button>
     </div>
-    <img src="assets/pinterest.png" alt="Examples of what our customers made">
+    <img src="assets/pinterest.png" alt="Examples of what our customers made" width="700px" height="686px">
 
   </section>
   <section id="trustpilot">
