--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
     <h1>
       Create your unique piece of &nbsp;<span>jewellery</span>
     </h1>
-    <img class="heroImg" id="heroDesk" src="assets/hero_img.jpg" alt="hero-img" />
-    <img class="heroImg" id="heroMob" src="assets/hero-mobile.jpg" alt="hero-img" />
+    <img class="heroImg" id="heroDesk" src="assets/hero_img.jpg"
+      alt="A girl with BYU studio ring sketches the next design of the ring" />
+    <img class="heroImg" id="heroMob" src="assets/hero-mobile.jpg" alt="Mom and daughter crafting together" />
     <div id="background"></div>
     <div id="bgMob" id="background-mobile"></div>
   </section>
