--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/home.css" />
   <link rel="stylesheet" href="css/cart.css">
   <link rel="stylesheet" href="css/menu.css" />
-  <title>Home | BYÙ Studio</title>
+  <title>Home | BYÙ Studio – personalised jewellery in precious metals</title>
 
 <body>
   <header>
